fixed an edge layout issue

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,6 +3,7 @@
 	width:60%;
 	padding:0 15px 60px;
 	float:left;
+	max-width:100%;
 	> :last-child{
 		margin-bottom:0;
 	}
